# bwi_robofleet

./: .gitmodules  CMakeLists.txt  README.md  package.xml
config/: config.bwiv2.hpp
launch/: bwi_robofleet.launch
scripts/: build.sh  configure.sh  install_deps.sh  run.sh  run_client.sh  run_pub.sh  v2_status.py
