<?xml version="1.0"?>
<package format="2">
  <name>bwi_robofleet</name>
  <version>0.0.0</version>
  <description>The bwi_robofleet package</description>

  <maintainer email="maxwell@cs.utexas.edu">Maxwell Svetlik</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
